--- a/package.json
+++ b/package.json
@@ -15,6 +15,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0",
+    "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0"
   }
 }
