--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "lib/mupli-core.js",
   "type": "module",
-
   "repository": {
     "type": "git",
     "url": "https://github.com/Mupli/mupli-core.git"
-},
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fast-querystring": "^1.1.1",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.10.0"
   }
 }
